tidy up List.readOnlyCopy(..)